# VoltAI

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PLAN.md  README.md  ROADMAP.md  UPDATE_NOTES.md  boltai_index.json  demo.sh  empty_index.json  test_index.json
.github/workflows/: ci.yml
docs/: a.txt  b.txt
mac-ui/: Makefile  Package.swift  README.md
mac-ui/.build/: build.db  debug.yaml  release.yaml
mac-ui/.build/arm64-apple-macosx/debug/: BoltAIMacUI  description.json
mac-ui/.build/arm64-apple-macosx/debug/BoltAIMacUI.build/: BoltAICaller.d  BoltAICaller.swiftdeps  BoltAIMacUI.emit-module.d  ContentView.d  DropZone.d  (+7 more)
mac-ui/.build/arm64-apple-macosx/release/: BoltAIMacUI  description.json
mac-ui/BoltAI.app/Contents/: Info.plist
mac-ui/BoltAI.app/Contents/MacOS/: BoltAI
mac-ui/BoltAI.app/Contents/Resources/: AppIcon.icns
mac-ui/BoltAIMacUI.app/Contents/MacOS/: boltai
mac-ui/Sources/BoltAI/: BoltAICaller.swift  BoltAIViewModel.swift  ContentView.swift  VoltAIViewModel.swift  main.swift
mac-ui/Sources/BoltAIMacUI/: BoltAICaller.swift  BoltAIViewModel.swift  ContentView.swift  DropZone.swift  main.swift
mac-ui/Sources/VoltAI/: ContentView.swift  DropZone.swift  VoltAICaller.swift  VoltAIViewModel.swift
mac-ui/Sources/VoltAICore/: VoltAICaller.swift  VoltAICallerProtocol.swift  VoltAIViewModel.swift
mac-ui/Tests/VoltAITests/: MockVoltAICaller.swift  VoltAITests.swift
mac-ui/scripts/: package_and_open.sh
mac-ui/tools/: render_logo.swift
src/: main.rs
src/nlp/: mod.rs  ner.rs  sentiment.rs  summarization.rs
test_docs/: ai.txt  nlp.txt
(+756 files in other folders)
