[package]
name = "boltai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
rayon = "1.7"
regex = "1.10"
anyhow = "1.0"
indicatif = "0.17"
parking_lot = "0.12"
termcolor = "1.2"
once_cell = "1.18"
pdf-extract = "0.7"
